RWD overflow-x problem && footer layout problem fixed.

--- a/src/components/styles/Contact.scss
+++ b/src/components/styles/Contact.scss
@@ -9,6 +9,7 @@
     margin-bottom: 1rem;
     // background-color: #221e3f;
     background-color: none;
+    overflow-x: hidden;
     .form{
         width: 70%;
         margin: 0 auto;
@@ -46,32 +47,36 @@
             background-color: #ffe838;
         }
     }
-    // .copyright{
-    //     width: 100%;
-    //     text-align: center;
-    //     background-color: #16162d;
-    //     padding: 2rem 0;
-    //     position: relative;
-    //     p{
-    //         font-size: 1rem;
-    //     }
-    // }
-    // .up{
-    //     position: absolute;
-    //     width: 5rem;
-    //     height: 5rem;
-    //     background-color: #eee;
-    //     top: -2.5rem;
-    //     right: 5rem;
-    //     border-radius: 100%;
-    //     display: flex;
-    //     cursor: pointer;
-    //     animation: pulse 2s infinite;
-    //     i{
-    //         color: #16162d;
-    //         font-size: 2rem;
-    //         margin: auto;
-    //     }
-    // }
+    .copyright{
+        width: 100%;
+        text-align: center;
+        // background-color: #16162d;
+        background-color:none;
+        padding: 2rem 0;
+        position: relative;
+        p{
+            font-size: 1rem;
+        }
+    }
+    .up{
+        position: absolute;
+        width: 5rem;
+        height: 5rem;
+        background-color: #eee;
+        top: -2.5rem;
+        right: 5rem;
+        border-radius: 100%;
+        display: flex;
+        cursor: pointer;
+        animation: pulse 2s infinite;
+        i{
+            color: #16162d;
+            font-size: 2rem;
+            margin: auto;
+        }
+        @media screen and (max-width: 768px){
+            right: 2rem;
+        }
+    }
 }
 
