--- a/src/components/styles/Home.scss
+++ b/src/components/styles/Home.scss
@@ -9,6 +9,7 @@
     background-repeat: no-repeat;
     -webkit-animation: fadeIn 3s ; /* Chrome, Safari, Opera */
     animation: fadeIn 3s ;
+    overflow-x: hidden;
   }
   ul {
     position: absolute;
