--- a/src/components/styles/Portfolio.scss
+++ b/src/components/styles/Portfolio.scss
@@ -4,7 +4,7 @@
     height: 100%;
     width: 100%;
     padding-top: 10%;
-    // overflow-x: hidden;
+    overflow-x: hidden;
     .portfolioItem{
         display: flex;
         align-items: center;
