--- a/src/components/styles/Tech.scss
+++ b/src/components/styles/Tech.scss
@@ -4,6 +4,7 @@
     height: 100%;
     width: 100%;
     padding-top: 10%;
+    overflow-x: hidden;
     .mySkills{
         margin-top: 10rem;
         display: grid;
